Added build task for creating Mac OS X application bundles.