@@ -12,6 +12,8 @@
             Java Distributed Computing Platform
     </description>
 
+	<property name="version" value="0.1"/>
+
 	<property name="src.dir" value="src"/>
 	<property name="lib.dir" value="lib"/>
 	<property name="build.dir" value="build"/>
@@ -184,6 +186,55 @@
 
 	<!--
 	java -Djava.library.path=lib -Djava.security.manager -Djava.security.auth.login.config=login.config -Djava.security.policy=policy -Dlog4j.configuration=file:./log4j.properties -jar jdcpserver.jar
+	-->
+	<target name="jarbundler">
+	    <taskdef name="jarbundler" classname="net.sourceforge.jarbundler.JarBundler"/>
+	</target>
+
+    <target name="macosx-bundle-server" depends="jarbundler,dist-server">
+        <mkdir dir="${dist.dir}/macosx"/>
+        <jarbundler
+            dir="${dist.dir}/macosx"
+            name="JDCP Server"
+            mainclass="${server.main}"
+            version="${version}"
+            bundleid="ca.eandb.jdcp.server"
+            jvmversion="1.6+"
+            vmoptions="-Djava.security.manager"
+            workingDirectory="$APP_PACKAGE/Contents/Resources/Java">
+            <jarfileset dir="${dist.dir}/server" includes="**/*.jar"/>
+            <javafileset dir="${dist.dir}/server" excludes="**/*.jar"/>
+            <javaproperty name="java.library.path" value="lib"/>
+            <javaproperty name="java.security.auth.login.config" value="etc/login.config"/>
+            <javaproperty name="java.security.policy" value="etc/policy"/>
+            <javaproperty name="log4j.configuration" value="file:./etc/log4j.properties"/>
+            <javaproperty name="apple.laf.useScreenMenuBar" value="true"/>
+            <javaproperty name="apple.awt.antialiasing" value="on"/>
+            <javaproperty name="apple.awt.textantialiasing" value="on"/>
+        </jarbundler>
+    </target>
+
+	<target name="macosx-bundle-worker" depends="jarbundler,dist-worker">
+		<mkdir dir="${dist.dir}/macosx"/>
+	    <jarbundler
+	    	dir="${dist.dir}/macosx"
+	    	name="JDCP Worker"
+	    	mainclass="${worker.main}"
+	    	version="${version}"
+	    	bundleid="ca.eandb.jdcp.worker"
+	    	jvmversion="1.6+"
+	    	workingDirectory="$APP_PACKAGE/Contents/Resources/Java">
+	    	<jarfileset dir="${dist.dir}/server" includes="**/*.jar"/>
+            <javafileset dir="${dist.dir}/server" excludes="**/*.jar"/>
+	    	<javaproperty name="java.library.path" value="lib"/>
+	    	<!-- <javaproperty name="java.security.policy" value="etc/policy"/> -->
+            <javaproperty name="log4j.configuration" value="file:./etc/log4j.properties"/>
+            <javaproperty name="apple.laf.useScreenMenuBar" value="true"/>
+            <javaproperty name="apple.awt.antialiasing" value="on"/>
+            <javaproperty name="apple.awt.textantialiasing" value="on"/>
+	    </jarbundler>
+	</target>
+	<!--
 	<target name="macosx">
 		<copy
             todir="${dist.dir}/macosx/JDCP Worker.app/Content/MacOS"
